# selendra-sdk

./: .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .npmignore  .prettierrc.js  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMP_PLAN.md  LICENSE  Makefile  PUBLISHING.md  PUBLISHING_GUIDE.md  README.md  TESTING_CHECKLIST.md  TODO.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
docs/: api.md  developer-guide.md  getting-started.md  web3-applications-guide.md
docs/api/: overview.md  react.md  rust.md  typescript.md
docs/guides/: getting-started.md  quick-start.md  react-hooks.md
docs/guides/migration/: from-ethers.md  from-polkadot-js.md
docs/tools/: developer-tools.md
docs/tutorials/: your-first-dapp.md
examples/: basic-usage.js  basic-usage.ts  defi-integration.ts  erc20-interaction.ts  evm-transfer.ts  multi-chain.ts  substrate-interaction.ts  websocket-events.ts
examples/advanced/: batch-transactions.ts  governance-voting.ts  nft-marketplace.ts  real-time-monitoring.ts  testing-utilities.ts
examples/rust/: basic_connection.rs
examples/simple-wallet/: README.md  package.json
examples/typescript/: basic_connection.ts
examples/use-cases/: dex-integration.ts  gaming-dapp.ts
monitoring/: dev-prometheus.yml
old/: PUBLISHING_CHECKLIST.md
old/docs/: implementation-status.md
old/docs/api/: typescript.md
old/docs/guides/migration/: from-polkadot-js.md
old/docs/tutorials/: your-first-dapp.md
old/examples/defi-swap-app/: README.md
old/examples/react/: basic_app.tsx
old/examples/simple-wallet/src/: App.tsx
old/monitoring/: prometheus.yml
old/rust/: README.md  rust-toolchain.toml
old/rust/examples/: substrate_contracts.rs  substrate_governance.rs  substrate_staking.rs  unified_api.rs
old/rust/src/: lib.rs
old/rust/src/connection/: mod.rs
old/rust/src/evm/: account.rs  contract.rs  events.rs  mod.rs  transaction.rs  types.rs
old/rust/src/substrate/: client.rs  contracts.rs
old/rust/src/types/: mod.rs
old/rust/src/unified/: balance.rs  contract.rs  transaction.rs
old/rust/src/utils/: conversion.rs  crypto.rs  retry.rs
old/rust/tests/: README.md
old/scripts/: build.sh
old/typescript/: babel.config.cjs  eslint.config.js  example-usage.js  jest.config.cjs  jest.unit.config.js  package-lock.json  tsconfig.json  tsconfig.test.json
old/typescript/example-test/: .env.example  .gitignore  README.md  tsconfig.json
old/typescript/examples/: README.md  react-hooks-example.tsx  substrate-basic.ts  substrate-staking.ts  unified-accounts.ts  validator-monitor.ts
old/typescript/src/: sdk.ts
old/typescript/tests/: setup-dom.ts  setup.ts  types.test.ts
rust/: Cargo.toml  README.md
rust/examples/: evm_connection.rs  substrate_connection.rs  unified_api.rs
rust/src/: lib.rs
rust/src/connection/: mod.rs
rust/src/evm/: account.rs  client.rs  contract.rs  events.rs  mod.rs  transaction.rs  types.rs
rust/src/substrate/: account.rs  events.rs  mod.rs  types.rs
rust/src/types/: mod.rs
rust/src/unified/: account.rs  client.rs  mod.rs
rust/src/utils/: logger.rs  mod.rs  validation.rs
rust/tests/: substrate_wrapper.rs
scripts/: deploy.sh  test-sdk.js  test.sh
sdk.ts/: README.md  TRANSFER_IMPLEMENTATION.md  package-lock.json  package.json  setup.sh  tsconfig.json
sdk.ts/examples/: README.md  package-lock.json  package.json  tsconfig.json
sdk.ts/examples/balance/: 01-substrate-balance.ts  02-evm-balance.ts  03-unified-balance.ts
sdk.ts/examples/connect/: 01-substrate-connection.ts  02-evm-connection.ts  03-unified-connection.ts
sdk.ts/examples/transfer/: 01-native-transfer.ts  02-erc20-transfer.ts  03-contract-interaction.ts  README.md
sdk.ts/src/: index.ts
sdk.ts/src/core/: factory.ts  index.ts  sdk.ts
sdk.ts/src/providers/: base.ts  evm.ts  index.ts  substrate.ts
sdk.ts/src/types/: enums.ts  index.ts  interfaces.ts
sdk.ts/src/utils/: config.ts  index.ts  logger.ts
src/: index.ts
src/config/: index.ts  networks.ts
src/evm/: contract.ts  index.ts  provider.ts
src/substrate/: api.ts  contract.ts  index.ts
src/types/: blockchain.ts  errors.ts  global.d.ts  index.ts  responses.ts
src/utils/: api.ts  constants.ts  devtools.ts  format.ts  helpers.ts  logger.ts  retry.ts  validation.ts  websocket.ts
src/wallet/: index.ts
tests/: setup.ts
tests/evm/: client.test.ts  contract.test.ts
tests/integration/: sdk.test.ts
tests/wallet/: wallet.test.ts
tests/wasm/: client.test.ts  contract.test.ts
typescript/: .prettierrc  README.md  eslint.config.js  fix-lint.cjs  jest.config.js  package-lock.json  package.json  test-sdk.js  tsconfig.json  tsconfig.tsbuildinfo
typescript/coverage/: clover.xml  coverage-summary.json  index.html  lcov.info
typescript/coverage/lcov-report/: index.html
typescript/coverage/src/: index.html  sdk.ts.html
typescript/example-test/: SDK_ISSUES.md  TESTING_CHECKLIST.md  package.json
typescript/example-test/docs/: ENV_SETUP.md  TEMPLATE.md
typescript/example-test/src/: index.ts
typescript/examples/: governance-tracker.ts  staking-dashboard.ts
typescript/src/: index.ts  sdk.ts  sdk.ts.bak
typescript/src/evm/: README.md  account.ts  client.ts  contract.ts  events.ts  index.ts  transaction.ts  types.ts
typescript/src/react/: hooks-substrate.ts  hooks.ts  provider.tsx  test-utils.tsx  types.ts  utils.ts
typescript/src/sdk/: connection.ts  evm.ts  index.ts  substrate.ts  unified.ts
typescript/src/substrate/: aleph.ts  democracy.ts  elections.ts  index.ts  staking.ts
typescript/src/test/: setup.ts
typescript/src/types/: chain-info.ts  common.ts  error.ts  hash.ts  index.ts  network.ts  sdk-types.ts  signature.ts  substrate.ts
typescript/src/unified/: accounts.ts
typescript/tests/: react-setup.js  sdk.test.ts  setup-dom.ts  setup.ts
typescript/tests/react/: hooks-substrate.test.ts
typescript/tests/substrate/: aleph.test.ts  democracy.test.ts  elections.test.ts  staking.test.ts
typescript/tests/unified/: accounts.test.ts
(+143 files in other folders)
