[package]
name = "selendra-sdk"
version = "0.2.0"
edition = "2021"
authors = ["Selendra Team <team@selendra.org>"]
license = "Apache-2.0"
description = "A comprehensive SDK for interacting with the Selendra blockchain - enhanced with EVM support"
repository = "https://github.com/selendra/selendra-sdk"
keywords = ["blockchain", "substrate", "polkadot", "selendra", "sdk", "evm", "ethereum"]
categories = ["api-bindings", "web-programming::http-client", "cryptography::cryptocurrencies"]
readme = "README.md"
rust-version = "1.70.0"

[dependencies]
# Enhanced Substrate dependencies (maintaining selendra_client compatibility)
sp-core = { version = "21.0.0", default-features = false }
sp-runtime = { version = "24.0.0", default-features = false }
sp-keyring = { version = "23.0.0", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false }

# Enhanced Substrate API client dependencies (upgraded from selendra_client)
subxt = { version = "0.32.0", default-features = false, features = ["jsonrpsee-client", "substrate-compat"], optional = true }
jsonrpsee = { version = "0.20.0", default-features = false, features = ["http-client", "ws-client"], optional = true }

# Enhanced EVM dependencies - consolidated into single ethers dependency
ethers = { version = "2.0.0", default-features = false, features = ["legacy", "providers", "contracts", "middleware", "signers"], optional = true }

# Enhanced async runtime (compatible with selendra_client)
tokio = { version = "1.35.0", default-features = false, features = ["rt-multi-thread", "macros", "time"], optional = true }
futures = { version = "0.3.29", default-features = false, features = ["executor"] }
async-trait = { version = "0.1.58", default-features = false }

# Enhanced error handling (compatible with selendra_client)
thiserror = { version = "1.0.51", default-features = false }
anyhow = { version = "1.0.75", default-features = false }

# Enhanced serialization (compatible with selendra_client)
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }

# Enhanced utilities (compatible with selendra_client)
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
bs58 = { version = "0.5.0", default-features = false }
log = { version = "0.4.20", default-features = false }
env_logger = { version = "0.10.1", default-features = false, optional = true }

# Enhanced HTTP client
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }

# Enhanced cryptography (compatible with selendra_client)
secp256k1 = { version = "0.28.2", default-features = false, features = ["rand-std", "global-context"] }
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
ripemd = { version = "0.1.3", default-features = false }

# Contract support (compatible with selendra_client)
contract-transcode = { version = "3.2.0", default-features = false, optional = true }
ink_metadata = { version = "4.3.0", default-features = false, optional = true }

# Additional EVM and bridge dependencies (streamlined)
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }

# Essential utilities (streamlined)
url = { version = "2.5.0", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
once_cell = { version = "1.19.0", default-features = false }

# [local] Selendra primitives for local development
# primitives = { path = "../../../primitives", default-features = false, optional = true }

[features]
default = ["std"]

# Standard library support
std = [
    "sp-core/std",
    "sp-runtime/std",
    "scale-codec/std",
    "scale-info/std",
    "tokio",
    "futures/std",
    "async-trait/std",
    "thiserror/std",
    "anyhow/std",
    "serde/std",
    "serde_json/std",
    "hex/std",
    "bs58/std",
    "log/std",
    "reqwest/std",
    "secp256k1/std",
    "hmac/std",
    "sha2/std",
    "sha3/std",
    "ripemd/std",
    "tiny-keccak/std",
    "url/std",
    "parking_lot/std",
    "once_cell/std",
]

# Optional features
evm = ["ethers", "ethers/legacy"]
substrate = ["subxt", "jsonrpsee"]
contracts = ["contract-transcode", "ink_metadata"]
logging = ["env_logger"]
rustls = ["reqwest/rustls-tls"]
openssl = ["reqwest/native-tls"]

# Combined features
full = ["std", "evm", "substrate", "contracts", "logging", "rustls"]

[workspace]
members = [
    ".",
    # Add other workspace members here in the future
]

[dev-dependencies]
tokio-test = "0.4.3"
tempfile = "3.10.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
mockall = "0.12.1"


[[example]]
name = "substrate_connection"
path = "examples/substrate_connection.rs"
required-features = ["substrate"]

[[example]]
name = "evm_connection"
path = "examples/evm_connection.rs"
required-features = ["evm"]

[[example]]
name = "unified_api"
path = "examples/unified_api.rs"
required-features = ["full"]

[[example]]
name = "contract_interaction"
path = "examples/contract_interaction.rs"
required-features = ["contracts"]

[[example]]
name = "cross_chain_bridge"
path = "examples/cross_chain_bridge.rs"
required-features = ["full"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-machete]
ignored = ["scale-codec", "contract-transcode", "ethers"]