[package]
name = "selendra-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Selendra Team <team@selendra.org>"]
license = "Apache-2.0"
description = "A comprehensive SDK for interacting with the Selendra blockchain - enhanced with EVM support"
repository = "https://github.com/selendra/selendra-sdk"
keywords = [
    "blockchain",
    "substrate",
    "polkadot",
    "selendra",
    "sdk",
    "evm",
    "ethereum",
]
categories = [
    "api-bindings",
    "web-programming::http-client",
    "cryptography::cryptocurrencies",
]
readme = "README.md"
rust-version = "1.70.0"

[dependencies]
# Core client
selendra_client = "1.0.1"

# Substrate dependencies
sp-core = { version = "20.0.0", default-features = false }
sp-keyring = { version = "23.0.0", default-features = false }
sp-runtime = { version = "23.0.0", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.0", default-features = false, features = [
    "derive",
] }

# Substrate client dependencies
subxt = { version = "0.30.1", default-features = false, features = [
    "substrate-compat",
], optional = true }
jsonrpsee = { version = "0.20.0", default-features = false, features = [
    "http-client",
    "ws-client",
], optional = true }

# EVM dependencies
ethers = { version = "2.0.0", default-features = false, features = [
    "legacy",
], optional = true }

# Async runtime
tokio = { version = "1.35.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "time",
], optional = true }
futures = { version = "0.3.29", default-features = false, features = [
    "executor",
] }
async-trait = { version = "0.1.58", default-features = false }

# Error handling
thiserror = { version = "1.0.51", default-features = false }
anyhow = { version = "1.0.75", default-features = false }

# Serialization
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }

# Utilities
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
bs58 = { version = "0.5.0", default-features = false }
ss58-registry = { version = "1.47.0", default-features = false }
log = { version = "0.4.20", default-features = false }
env_logger = { version = "0.10.1", default-features = false, optional = true }

# HTTP client
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Cryptography
secp256k1 = { version = "0.28.2", default-features = false, features = [
    "rand-std",
    "global-context",
] }
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
ripemd = { version = "0.1.3", default-features = false }

# Contract support
contract-transcode = { version = "3.2.0", default-features = false, optional = true }
ink_metadata = { version = "4.3.0", default-features = false, optional = true }

# EVM and bridge support
tiny-keccak = { version = "2.0.2", default-features = false, features = [
    "keccak",
] }

url = { version = "2.5.0", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
rust_decimal = { version = "1.36.0", default-features = false }

uuid = { version = "1.6.1", default-features = false, features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
regex = { version = "1.10.2", default-features = false }
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
blake2 = { version = "0.10.6", default-features = false, features = ["std"] }

[features]
default = ["std", "substrate"]

std = [
    "sp-core/std",
    "scale-codec/std",
    "tokio",
    "futures/std",
    "anyhow/std",
    "serde/std",
    "serde_json/std",
    "hex/std",
    "bs58/std",
    "ss58-registry/std",
    "log/std",
    "secp256k1/std",
    "hmac/std",
    "sha2/std",
    "sha3/std",
    "ripemd/std",
    "url/std",
    "once_cell/std",
    "rust_decimal/std",
    "uuid/std",
    "chrono/std",
    "regex/std",
    "rand/std",
    "blake2/std",
]

evm = ["ethers", "ethers/legacy"]
substrate = ["jsonrpsee", "subxt", "sp-runtime/std", "sp-core/std", "tokio"]
contracts = ["contract-transcode", "ink_metadata"]
logging = ["env_logger"]
rustls = ["reqwest/rustls-tls"]
openssl = ["reqwest/native-tls"]

full = ["std", "evm", "substrate", "contracts", "logging", "rustls"]

[workspace]
members = ["."]

[dev-dependencies]
tokio-test = "0.4.3"
tempfile = "3.10.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
mockall = "0.12.1"


[[example]]
name = "substrate_connection"
path = "examples/substrate_connection.rs"
required-features = ["substrate", "logging"]

[[example]]
name = "substrate_staking"
path = "examples/substrate_staking.rs"
required-features = ["substrate"]

[[example]]
name = "substrate_governance"
path = "examples/substrate_governance.rs"
required-features = ["substrate"]

[[example]]
name = "substrate_contracts"
path = "examples/substrate_contracts.rs"
required-features = ["substrate"]

[[example]]
name = "evm_connection"
path = "examples/evm_connection.rs"
required-features = ["evm"]

[[example]]
name = "unified_api"
path = "examples/unified_api.rs"
required-features = ["full"]

[[example]]
name = "contract_interaction"
path = "examples/contract_interaction.rs"
required-features = ["contracts"]

[[example]]
name = "cross_chain_bridge"
path = "examples/cross_chain_bridge.rs"
required-features = ["full"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-machete]
ignored = ["scale-codec", "contract-transcode", "ethers"]
